# mcpelauncher-manifest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: autorespond.yml  branch_sync.yml  ci.yml  main.yml
cmake/: FindCocoa.cmake  FindCoreVideo.cmake  FindIOKit.cmake  FindPkgMacros.cmake  FindPulseAudio.cmake  glfw.cmake  json.cmake
ext/: curl.cmake  gamepad_mappings.cmake  gamepad_mappings_download.cmake  glfw.cmake  json.cmake  sdl3.cmake  snmalloc.cmake
